# Browser-Data-Grabber

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  resources.qrc
src/: main.cpp
src/config/: config.cpp  config.h
src/generator/: stubgenerator.cpp  stubgenerator.h
src/ui/: mainwindow.cpp  mainwindow.h
